# DataCollectTool

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: create_venv.sh  run_cli_help.sh  run_gui.sh
tool_piper/: __init__.py  cli.py  constants.py  reports.py
tool_piper/collection/: __init__.py  episode_manager.py  interfaces.py
tool_piper/gui/: __init__.py  app.py  formatting.py  guide.py  main_window.py  state.py  workers.py
tool_piper/lerobot/: __init__.py  convert.py  inspect.py  openpi_legacy.py  replay.py
tool_piper/model/: __init__.py  observation.py  policy_client.py
tool_piper/norm/: __init__.py  stats.py
tool_piper/raw/: __init__.py  binary_io.py  inspector.py  piper_datastructures.py  sync.py
