[build-system]
requires = ["setuptools>=71,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-piper"
version = "0.1.0"
description = "Standalone Piper data collection and processing toolchain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2",
    "opencv-python<4.12",
    "opencv-python-headless<4.12",
    "rerun-sdk<0.26",
    "pyarrow",
    "pandas",
    "tqdm",
    "msgpack",
    "websockets",
    "lerobot==0.1.0",
]

[project.optional-dependencies]
gui = ["PySide6"]

[project.scripts]
tool-piper = "tool_piper.cli:main"
tool-piper-gui = "tool_piper.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tool_piper*"]
